// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MakeWebWidget /> should match to snapshot when exist error 1`] = `
<OutsideClickHandler
  onOutSideClick={[Function]}
>
  <form
    className="MakeWebWidget"
  >
    <h5
      className="MakeWebWidget__title"
    >
      Make new web widget
    </h5>
    <ValidationInput
      autoFocus={false}
      className="ValidationInput"
      error="mock-error"
      errorClassName="ValidationInput__validation-message"
      inputClassName="ValidationInput__text-input"
      name="Name"
      nameClassName="ValidationInput__label"
      onChange={[Function]}
      placeholder="Write your site name"
      value="mock-name"
    />
    <ValidationInput
      autoFocus={false}
      className="ValidationInput"
      error="mock-error"
      errorClassName="ValidationInput__validation-message"
      inputClassName="ValidationInput__text-input"
      name="Url"
      nameClassName="ValidationInput__label"
      onChange={[Function]}
      placeholder="Keep it 'http://' or 'https://'"
      value="mock-url"
    />
    <div
      className="MakeWebWidget__button-set"
    >
      <button
        className="Btn Btn-middle"
        onClick={[Function]}
        type="button"
      >
        Close
      </button>
      <input
        className="Btn Btn--primary"
        onClick={[Function]}
        type="submit"
        value="Create New Widget"
      />
    </div>
  </form>
</OutsideClickHandler>
`;

exports[`<MakeWebWidget /> should match to snapshot when render default 1`] = `
<OutsideClickHandler
  onOutSideClick={[Function]}
>
  <form
    className="MakeWebWidget"
  >
    <h5
      className="MakeWebWidget__title"
    >
      Make new web widget
    </h5>
    <ValidationInput
      autoFocus={false}
      className="ValidationInput"
      error=""
      errorClassName="ValidationInput__validation-message"
      inputClassName="ValidationInput__text-input"
      name="Name"
      nameClassName="ValidationInput__label"
      onChange={[Function]}
      placeholder="Write your site name"
      value=""
    />
    <ValidationInput
      autoFocus={false}
      className="ValidationInput"
      error=""
      errorClassName="ValidationInput__validation-message"
      inputClassName="ValidationInput__text-input"
      name="Url"
      nameClassName="ValidationInput__label"
      onChange={[Function]}
      placeholder="Keep it 'http://' or 'https://'"
      value=""
    />
    <div
      className="MakeWebWidget__button-set"
    >
      <button
        className="Btn Btn-middle"
        onClick={[Function]}
        type="button"
      >
        Close
      </button>
      <input
        className="Btn Btn--primary"
        onClick={[Function]}
        type="submit"
        value="Create New Widget"
      />
    </div>
  </form>
</OutsideClickHandler>
`;
